# mecs_monitor

./: CMakeLists.txt  README.md  infoext_old.cpp  infoext_old.h  package.xml
include/: info_extractor.h  info_extractor.h~  kinect_subscriber.h  kinect_subscriber.h~  mecs_renderer.h  mecs_renderer.h~  parameters.h  people_publisher.h  people_publisher.h~  people_renderer.h  people_renderer.h~
launch/: mult_kin.launch  mult_kin.launch~  skin.launch
msg/: ExtInfo.msg  ExtInfo.msg~  Observed_People.msg~
old/: info_extractor.cpp  info_extractor.h
src/: info_extractor.cpp  info_extractor.cpp.old  info_extractor.cpp~  kinect_subscriber.cpp  kinect_subscriber.cpp~  main.cpp  main.cpp~  mecs_info_publisher.cpp  mecs_info_publisher.cpp~  mecs_renderer.cpp  mecs_renderer.cpp~  mecs_tracker.cpp  mecs_tracker.cpp~  openpose_flags.cpp  openpose_flags.cpp~
